# controllers/helper.go
@@ -1,5 +1,18 @@
 package controllers
 
-type ErrorResponse struct {
-	error string
+import "github.com/gin-gonic/gin"
+
+type Response struct {
+	Code int         `json:"code"`
+	Msg  string      `json:"msg"`
+	Data interface{} `json:"data"`
+}
+
+func HttpRes(c *gin.Context, httpCode int, msg string, data interface{}) {
+	c.JSON(httpCode, Response{
+		Code: httpCode,
+		Msg:  msg,
+		Data: data,
+	})
+	return
 }
